Update and rename forFun.html to introduction.html

--- a/Web/HTML, CSS/introduction.html
+++ b/Web/HTML, CSS/introduction.html
@@ -37,6 +37,10 @@
             <p>Hi everyone, my name is Tran Duy Thanh. Today I'm gonna tell you what I just learned about. I will seperate it into these sections:</p>
             <ol>
                 <li>
+                    <strong>Who am I?</strong>
+                </li>
+
+                <li>
                     <strong>Who I met today?</strong>
                 </li>
 
@@ -52,6 +56,22 @@
 
         <div class="Content">
             <ul>
+                <li>
+                    <strong><h1>Who am I?</h1></strong>
+                    <p>My full name is Tran Duy Thanh. I also have another name is Youth22341. I was born in 2001 and I'm studying mechatronics at Bach Khoa University of Technology Ho Chi Minh City. I have passionate about mathematics, automation and coding (but bad at electronics T=T). Besides that I love working with team mate and help others with my knowledge. In FE field, I don't have so much experience. I only know HTML, CSS basic through TEK4.VN.
+                    About my character, maybe I will be quiet at first sight, but don't worry, it do not take long. To know more, I have 2 chanels to connect, welcome you to come and see:<br>
+                    <ul>
+                        <li>
+                            <em>Youtube:</em> <a href="https://www.youtube.com/channel/UCG8VRalXDq0tbjQ-4h3lsFQ" alt="My Youtube chanel">My Youtube chanel</a>
+                        </li>
+
+                        <li>
+                            <em>Github:</em> <a href="https://github.com/youth22341" alt="My Github account">My Github account</a>
+                        </li>
+                    </ul>
+                    </p>
+                </li>
+
                 <li>
                     <strong><h1>Who I met today?</h1></strong>
                     <p>As usually, I surf Tiktok to relax after studying so hard. In that social, I use to like watching news about tech, music, Kpop,..Suddenly I see the news about teaching JavaScript in next month, which only 2 slots left. I'm so excited because it's the thing I'm looking for now. 
