--- a/Web/HTML, CSS/introduction.html
+++ b/Web/HTML, CSS/introduction.html
@@ -62,11 +62,11 @@
                     About my character, maybe I will be quiet at first sight, but don't worry, it do not take long. To know more, I have 2 chanels to connect, welcome you to come and see:<br>
                     <ul>
                         <li>
-                            <em>Youtube:</em> <a href="https://www.youtube.com/channel/UCG8VRalXDq0tbjQ-4h3lsFQ" alt="My Youtube chanel">My Youtube chanel</a>
+                            <em>Youtube:</em> <a target="_blank" href="https://www.youtube.com/channel/UCG8VRalXDq0tbjQ-4h3lsFQ" alt="My Youtube chanel">My Youtube chanel</a>
                         </li>
 
                         <li>
-                            <em>Github:</em> <a href="https://github.com/youth22341" alt="My Github account">My Github account</a>
+                            <em>Github:</em> <a target="_blank" href="https://github.com/youth22341" alt="My Github account">My Github account</a>
                         </li>
                     </ul>
                     </p>
